correction of sigmoid and expected value

--- a/book/math_foundations/nn/perceptron.ipynb
+++ b/book/math_foundations/nn/perceptron.ipynb
@@ -310,10 +310,10 @@
    "source": [
     "## Activatiefuncties\n",
     "(target-activation)=\n",
-    "De **activatiefunctie** $\\phi(z)$ is cruciaal voor de werking van een perceptron. Ze **vertaalt de lineaire combinatie van inputs en gewichten naar een output via een S-vormige (_sigmoid_) transformatie**. Er bestaan verschillende varianten met verschillende eigenschappen. Hieronder bekijken we de meest gebruikelijke:\n",
+    "De **activatiefunctie** $\\phi(z)$ is cruciaal voor de werking van een perceptron. Ze **vertaalt de lineaire combinatie van inputs en gewichten naar een output via een niet-lineaire transformatie die bepaalt of en in welke mate het perceptron actief wordt**. Er bestaan verschillende varianten met verschillende eigenschappen. Hieronder bekijken we de meest gebruikelijke:\n",
     "\n",
     "### 1. Logistische\n",
-    "De logistische functie die we al kennen van het logistische regressiemodel:\n",
+    "De logistische functie is een S-vormige functie die we al kennen van het logistische regressiemodel:\n",
     "\n",
     "$$\n",
     "\\phi(z) = \\sigma(z) = \\frac{1}{1 + e^{-z}}\n",
@@ -324,7 +324,7 @@
     "- Gebruik: Binaire klassificatie (output kan als probabiliteit geïnterpreteerd worden)\n",
     "\n",
     "### 2. _Tanh_ (Hyperbolische tangens)\n",
-    "Een _sigmoid_ functie die tussen -1 en 1 schaalt:\n",
+    "Dit is ook een S-vormige functie die tussen -1 en 1 schaalt:\n",
     "\n",
     "$$\n",
     "\\phi(z) = \\tanh(z) = \\frac{e^z - e^{-z}}{e^z + e^{-z}}\n",
@@ -334,7 +334,7 @@
     "- Voordeel: Zero-centered (gemiddelde output rond 0)\n",
     "\n",
     "### 3. ReLU (Rectified Linear Unit)\n",
-    "**ReLU** is de meest populaire activatiefunctie in moderne neurale netwerken:\n",
+    "**ReLU** is een _piecewise linear_ functie en is de meest populaire activatiefunctie in moderne neurale netwerken:\n",
     "\n",
     "$$\n",
     "\\phi(z) = \\max(0, z) = \\begin{cases} z & \\text{als } z > 0 \\\\ 0 & \\text{als } z \\leq 0 \\end{cases}\n",
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "eb264c65",
    "metadata": {
     "tags": [
@@ -395,7 +395,7 @@
     "# Generate x values\n",
     "x = np.linspace(-5, 5, 1000)\n",
     "\n",
-    "# 1. Sigmoid\n",
+    "# 1. Logistic (Sigmoid)\n",
     "ax = axes[0]\n",
     "y_sigmoid = 1 / (1 + np.exp(-x))\n",
     "ax.plot(x, y_sigmoid, \"b-\", linewidth=2.5, label=\"σ(z)\")\n",
