--- a/book/math_foundations/prob/probability.ipynb
+++ b/book/math_foundations/prob/probability.ipynb
@@ -1199,7 +1199,7 @@
     "### Verwachte waarde\n",
     "\n",
     "(target-expectation)=\n",
-    "De **verwachte waarde** $\\mathbb{E}[\\text{x}]$ of $\\mu$ is het gemiddelde dat we verwachten bij een oneindige steekproefgrootte.\n",
+    "De **verwachte waarde** $\\mathbb{E}[\\text{x}]$ van een stochastische variabele is de waarde die deze stochastische variabele _gemiddeld genomen_ zal aannemen. Dit gemiddelde is het gewogen gemiddelde van alle mogelijke uitkomsten met als gewichtsfactor de kans dat een bepaalde waarde zich voordoet.\n",
     "\n",
     "Voor discrete kansvariabelen vermenigvuldigen we elke mogelijke waarde met zijn kans en tellen alles op:\n",
     "$$\n",
@@ -1232,7 +1232,7 @@
     "### Mediaan\n",
     "\n",
     "(target-median)=\n",
-    "De **mediaan** is de waarde waarbij 50% van de kansmassa links en 50% rechts ligt. Bij scheve verdelingen verschilt deze van de verwachtingswaarde.\n",
+    "De **mediaan** is de waarde waarbij 50% van de kansmassa links en 50% rechts ligt. Bij scheve verdelingen verschilt deze van de verwachte waarde.\n",
     "\n",
     "Voor een continue random variabele $\\text{x}$ met PDF $p(x)$ is de mediaan $m$ gedefinieerd als:\n",
     "$$\n",
@@ -1414,7 +1414,7 @@
     "### Variantie\n",
     "\n",
     "(target-variance)=\n",
-    "De **variantie** $\\text{Var}(x)$ of $\\sigma^2$ meet hoe ver waarden gemiddeld van de verwachtingswaarde afliggen in gekwadrateerde eenheden.\n",
+    "De **variantie** $\\text{Var}(x)$ of $\\sigma^2$ meet hoe ver waarden gemiddeld van de verwachte waarde afliggen in gekwadrateerde eenheden.\n",
     "\n",
     "#### Populatievariantie\n",
     "\n",
