solution last lab

--- a/book/ml_principles/labs/prep/imgrec.ipynb
+++ b/book/ml_principles/labs/prep/imgrec.ipynb
@@ -23,8 +23,24 @@
     "❓ Met welke soort taak hebben we hier te maken?\n",
     "  \n",
     "✍️  \n",
+    "Klassificatie van beelden\n",
     "  \n",
-    "🔑  \n"
+    "🔑  \n",
+    "De target variabele heeft 10 niveaus die overeenkomen met de labels van de inputbeelden.\n",
+    "```\n",
+    "classes = [\n",
+    "    \"T-shirt/top\",\n",
+    "    \"Trouser\",\n",
+    "    \"Pullover\",\n",
+    "    \"Dress\",\n",
+    "    \"Coat\",\n",
+    "    \"Sandal\",\n",
+    "    \"Shirt\",\n",
+    "    \"Sneaker\",\n",
+    "    \"Bag\",\n",
+    "    \"Ankle boot\",\n",
+    "]\n",
+    "```"
    ]
   },
   {
@@ -36,8 +52,10 @@
     "❓ Met welke soort van model wordt hier gewerkt?\n",
     "  \n",
     "✍️  \n",
-    "\n",
-    "🔑  \n"
+    "Een convolutioneel neuraal netwerk.\n",
+    "  \n",
+    "🔑  \n",
+    "De modeldefinitie laat zien dat de basis van het model uit Convolutionele lagen bestaat."
    ]
   },
   {
@@ -49,8 +67,10 @@
     "❓ Hoeveel parameters heeft het model?\n",
     "  \n",
     "✍️  \n",
+    "421642\n",
     "  \n",
-    "🔑  \n"
+    "🔑  \n",
+    "Wordt berekend in de model definite cel."
    ]
   },
   {
@@ -62,8 +82,10 @@
     "❓ Met welke soort ervaring wordt er hier geleerd?\n",
     "  \n",
     "✍️  \n",
+    "Supervised learning\n",
     "  \n",
-    "🔑  \n"
+    "🔑  \n",
+    "Er zijn target waarden aanwezig waarmee de loss berekend wordt"
    ]
   },
   {
@@ -75,8 +97,10 @@
     "❓ Na hoeveel inputs worden gewichten aangepast tijdens de training?\n",
     "  \n",
     "✍️  \n",
+    "64\n",
     "  \n",
-    "🔑  \n"
+    "🔑  \n",
+    "Dit is de batch size"
    ]
   },
   {
@@ -88,8 +112,10 @@
     "❓ Hoe vaak heeft het model de trainingsdata gezien tijdens het trainen?\n",
     "  \n",
     "✍️  \n",
+    "5\n",
     "  \n",
-    "🔑  \n"
+    "🔑  \n",
+    "Dit is het aantal epochs"
    ]
   },
   {
@@ -101,8 +127,10 @@
     "❓ Welke verliesfunctie wordt hier gebruikt?\n",
     "  \n",
     "✍️  \n",
+    "Cross Entropy Loss\n",
     "  \n",
-    "🔑  \n"
+    "🔑  \n",
+    "zie `loss_fn = nn.CrossEntropyLoss()`"
    ]
   },
   {
@@ -114,8 +142,10 @@
     "❓ Welk optimalisatie algoritme wordt hier gebruikt?\n",
     "  \n",
     "✍️  \n",
+    "Stochastic Gradient Descent\n",
     "  \n",
-    "🔑  \n"
+    "🔑  \n",
+    "zie `optimizer = torch.optim.SGD(model.parameters(), lr=1e-3)`"
    ]
   },
   {
@@ -127,8 +157,9 @@
     "❓ Met welke stapgrootte wordt er tijdens de optimalisatie gewerkt?\n",
     "  \n",
     "✍️  \n",
-    "\n",
-    "🔑  \n"
+    "1e-3  \n",
+    "🔑  \n",
+    "zie `optimizer = torch.optim.SGD(model.parameters(), lr=1e-3)`"
    ]
   },
   {
@@ -140,8 +171,17 @@
     "❓ Welke score metrics worden hier bekeken?\n",
     "  \n",
     "✍️  \n",
-    "\n",
-    "🔑  \n"
+    "Accuracy\n",
+    "Precision\n",
+    "Recall\n",
+    "F1-score  \n",
+    "🔑  \n",
+    "```\n",
+    "Overall Accuracy: 70.00%\n",
+    "Average Precision: 0.694\n",
+    "Average Recall: 0.700\n",
+    "Average F1-Score: 0.679\n",
+    "```"
    ]
   },
   {
@@ -153,8 +193,9 @@
     "❓ Er blijkt nogal wat verschil te zitten op de kwaliteit van de predicties per klasse. Zou dit te wijten kunnen zijn aan _bias_ in de trainingsdata? Zo ja/nee waarom?\n",
     "  \n",
     "✍️  \n",
-    "\n",
-    "🔑  \n"
+    "Nee, de data zijn perfect gebalanceerd met betrekking tot de klasses. De verschillen zijn enkel aan de visuele eigenschappen te wijten.\n",
+    "🔑  \n",
+    "Zie de visualisatie van de trainingsdata volumes er klasse"
    ]
   },
   {
