--- a/book/ml_principles/labs/prep/nlp.ipynb
+++ b/book/ml_principles/labs/prep/nlp.ipynb
@@ -23,8 +23,14 @@
     "❓ Met welke soort taak hebben we hier te maken?\n",
     "  \n",
     "✍️  \n",
+    "Klassificatie van tekst (sentiment analyse)\n",
     "  \n",
-    "🔑  \n"
+    "🔑  \n",
+    "\n",
+    "De target variabele heeft 2 niveaus die overeenkomen met positieve en negatieve recensies.\n",
+    "\n",
+    "``````\n",
+    "classes = [\"Negative\", \"Positive\"]"
    ]
   },
   {
@@ -36,8 +42,11 @@
     "❓ Met welke soort van model wordt hier gewerkt?\n",
     "  \n",
     "✍️  \n",
+    "Een Transformer model (DistilBERT)\n",
     "\n",
-    "🔑  \n"
+    "🔑  \n",
+    "\n",
+    "Zie `model = AutoModelForSequenceClassification.from_pretrained(\"distilbert-base-uncased\", num_labels=2)` en de output van `print(model)`. Dit toont dat er een transformer blok aanwezig is."
    ]
   },
   {
@@ -49,8 +58,11 @@
     "❓ Hoeveel parameters heeft het model?\n",
     "  \n",
     "✍️  \n",
+    "66955010\n",
     "  \n",
-    "🔑  \n"
+    "🔑  \n",
+    "\n",
+    "Wordt getoond in de output van cel 10 waar het model wordt geladen: `Total number of trainable parameters: 66,955,010`"
    ]
   },
   {
@@ -62,8 +74,11 @@
     "❓ Met welke soort ervaring wordt er hier geleerd?\n",
     "  \n",
     "✍️  \n",
+    "Supervised learning (fine-tuning)\n",
     "  \n",
-    "🔑  \n"
+    "🔑  \n",
+    "\n",
+    "Er zijn target waarden (labels) aanwezig in de dataset die aangeven of een recensie positief of negatief is. Deze worden gebruikt om de loss te berekenen tijdens het fine-tunen."
    ]
   },
   {
@@ -75,8 +90,11 @@
     "❓ Na hoeveel inputs worden gewichten aangepast tijdens de training?\n",
     "  \n",
     "✍️  \n",
+    "16\n",
     "  \n",
-    "🔑  \n"
+    "🔑  \n",
+    "\n",
+    "Dit is de batch size: zie `batch_size = 16`"
    ]
   },
   {
@@ -88,8 +106,11 @@
     "❓ Hoe vaak heeft het model de trainingsdata gezien tijdens het trainen?\n",
     "  \n",
     "✍️  \n",
+    "2\n",
     "  \n",
-    "🔑  \n"
+    "🔑  \n",
+    "\n",
+    "Dit is het aantal epochs: zie `epochs = 2`"
    ]
   },
   {
@@ -101,8 +122,11 @@
     "❓ Welke verliesfunctie wordt hier gebruikt?\n",
     "  \n",
     "✍️  \n",
+    "Cross Entropy Loss\n",
+    "  \n",
+    "🔑  \n",
     "\n",
-    "🔑  \n"
+    "De loss wordt automatisch berekend door het model zelf wanneer we labels meegeven: `Loss function (CrossEntropyLoss is used internally by the model)`."
    ]
   },
   {
@@ -114,8 +138,11 @@
     "❓ Welk optimalisatie algoritme wordt hier gebruikt?\n",
     "  \n",
     "✍️  \n",
+    "AdamW (Adam met weight decay)\n",
     "  \n",
-    "🔑  \n"
+    "🔑  \n",
+    "\n",
+    "Zie `optimizer = torch.optim.AdamW(model.parameters(), lr=learning_rate)`."
    ]
   },
   {
@@ -127,8 +154,11 @@
     "❓ Met welke stapgrootte wordt er tijdens de optimalisatie gewerkt?\n",
     "  \n",
     "✍️  \n",
+    "2e-5\n",
     "\n",
-    "🔑  \n"
+    "🔑  \n",
+    "\n",
+    "Zie `learning_rate = 2e-5` en `optimizer = torch.optim.AdamW(model.parameters(), lr=learning_rate)`. Deze kleine learning rate is typisch voor het fine-tunen van pre-trained transformers."
    ]
   },
   {
@@ -140,6 +170,10 @@
     "❓ Welke score metrics worden hier bekeken?\n",
     "  \n",
     "✍️  \n",
+    "Accuracy  \n",
+    "Precision  \n",
+    "Recall  \n",
+    "F1-score\n",
     "\n",
     "🔑  "
    ]
@@ -153,8 +187,10 @@
     "❓ Hoe worden de text inputs aan het model doorgegeven?\n",
     "  \n",
     "✍️  \n",
+    "Via een tokenizer.\n",
     "\n",
-    "🔑  \n"
+    "🔑  \n",
+    "zie `tokenizer = AutoTokenizer.from_pretrained(model_name)`"
    ]
   },
   {
