switch to myst builder and fix some typos

--- a/book/ml_principles/labs/prep/imgrec.ipynb
+++ b/book/ml_principles/labs/prep/imgrec.ipynb
@@ -70,7 +70,7 @@
     "421642\n",
     "  \n",
     "🔑  \n",
-    "Wordt berekend in de model definite cel."
+    "Wordt berekend in de model definitie cel."
    ]
   },
   {
@@ -195,7 +195,7 @@
     "✍️  \n",
     "Nee, de data zijn perfect gebalanceerd met betrekking tot de klasses. De verschillen zijn enkel aan de visuele eigenschappen te wijten.\n",
     "🔑  \n",
-    "Zie de visualisatie van de trainingsdata volumes er klasse"
+    "Zie de visualisatie van de trainingsdata volumes per klasse"
    ]
   },
   {
