--- a/book/ml_principles/labs/prep/nlp.ipynb
+++ b/book/ml_principles/labs/prep/nlp.ipynb
@@ -29,8 +29,9 @@
     "\n",
     "De target variabele heeft 2 niveaus die overeenkomen met positieve en negatieve recensies.\n",
     "\n",
-    "``````\n",
-    "classes = [\"Negative\", \"Positive\"]"
+    "```\n",
+    "classes = [\"Negative\", \"Positive\"]\n",
+    "```"
    ]
   },
   {
